squirrel-front/etc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: game
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - belka.lakeofcolors.com
      secretName: frontend-tls
  rules:
    - host: belka.lakeofcolors.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squirrel-front
                port:
                  number: 80
